# betrayal-at-krondor

./: .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  flake.nix  lefthook.yml  pyproject.toml  xbak.gpe  xbak_gp2x.sh
.claude/agents/: asm-reviewer.md  investigator.md
.claude/skills/asm-documenter/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/doxygen-c/: SKILL.md
bak/: KRN102.RSP  KRONDOR.RSP  MAKEFILE  RECIPES.MAK
bak/INCLUDE/: defines.h  gfx169d.h  gfxctx.inc  globals.h  gstate.inc  gtypes.h  r3d.h  statname.h  structs.h  v102.h  vgablit.h
bak/OUT102/: README.TXT
bak/SRC/AUDIO/: AUDIO.MAK  CDAUDIO.ASM  CDAUDIO.H
bak/SRC/AUDIO/CHAN/: AUDCCHG.C  AUDCCHG.H  AUDCHBYT.C  AUDCHBYT.H  AUDCHFID.C  AUDCHFID.H  AUDCHORD.C  AUDCHORD.H  AUDCHWRD.C  AUDCHWRD.H  AUDCMD07.C  AUDCMD07.H  AUDSETIN.C  AUDSETIN.H  AUDSTPCT.C  AUDSTPCT.H  AUDSTPID.C  AUDSTPID.H  D_3508.ASM  SFXCHAN.C  SFXCHAN.H  SFXEVENT.C  SFXEVENT.H
bak/SRC/AUDIO/DRIVER/: DISP35E0.ASM  DISP35E0.H  D_32C8.ASM  MIDI.ASM  MIDI.H  MUSDISP.ASM  MUSDISP.H  SNDDRV.ASM  SNDDRV.H
bak/SRC/AUDIO/ENGINE/: AUDDRVST.C  AUDDRVST.H  AUDIO.C  AUDIO.H  AUDITER.C  AUDITER.H  AUDSTART.C  AUDSTART.H  AUDSTOP.C  AUDSTOP.H  AUDSTPFL.C  AUDSTPFL.H  AUDSTPND.C  AUDSTPND.H
bak/SRC/AUDIO/MUSIC/: MUSCREAT.C  MUSCREAT.H  MUSFADE.C  MUSFADE.H  MUSSTART.C  MUSSTART.H  MUSSTOP.C  MUSSTOP.H  SNDLADV.C  SNDLADV.H
bak/SRC/AUDIO/RES/: AUDLOAD.C  AUDLOAD.H  AUDRES.C  AUDRES.H  AUDRESIN.C  AUDRESIN.H  AUDRESLD.C  AUDRESLD.H  D_320A.ASM  D_35F4.ASM  PASCREC.C  PASCREC.H  POOL.C  POOL.H
bak/SRC/AUDIO/SFX/: SFXFIND.C  SFXFIND.H  SFXPLAY.C  SFXPLAY.H  SFXSTOP.C  SFXSTOP.H  SFXSTPAL.C  SFXSTPAL.H
bak/SRC/AUDIO/SND/: SFXTERM.C  SFXTERM.H  SNDBUFAL.C  SNDBUFAL.H  SNDBUFFR.C  SNDBUFFR.H  SNDINIT.C  SNDINIT.H  SNDINST.C  SNDINST.H  SNDSTOP.C  SNDSTOP.H
bak/SRC/CHAR/: CHAR.MAK  CHARSCRN.C  CHARSCRN.H  STAT.C  STAT.H
bak/SRC/COMBAT/: COMBAT.MAK
bak/SRC/COMBAT/ACTOR/: CACTOR.C  CACTOR.H
bak/SRC/COMBAT/AI/: CBTAI.C  CBTAI.H  CBTAIACT.C  CBTAIACT.H  CBTAITRN.C  CBTAITRN.H  CMBTAI.C  CMBTAI.H
bak/SRC/COMBAT/ARENA/: COMBAT.C  COMBAT.H
bak/SRC/COMBAT/ENC/: CBENC.C  CBENC.H
bak/SRC/COMBAT/GRID/: CMBTGRID.C  CMBTGRID.H
bak/SRC/COMBAT/SPELL/: CSPELL.C  CSPELL.H  HEXANIM.C  HEXANIM.H  SPELLFX.C  SPELLFX.H
bak/SRC/COMBAT/STATS/: CBSTAT.C  CBSTAT.H  MONSTAT.C  MONSTAT.H
bak/SRC/DIALOG/: ASKABOUT.C  ASKABOUT.H  DIALOG.C  DIALOG.H  DIALOG.MAK  EVTCOND.C  EVTCOND.H
bak/SRC/DRIVERS/: DRIVERS.MAK  SX.PAK  VMCODE.PAK
bak/SRC/DRIVERS/SX/: ADL.ASM  ADS.ASM  APA.ASM  ASB.ASM  BINDATA.TXT  GMD.ASM  M32.ASM  NLD.ASM  PRO.ASM  PS1.ASM  SBP.ASM  STD.ASM
bak/SRC/DRIVERS/VMCODE/: CGA.ASM  EGA.ASM  EVA.ASM  EVG.ASM  GFXCTX.INC  HEG.ASM  MCG.ASM  TAN.ASM  VGA.ASM
bak/SRC/GAME/: BOOT.C  BOOT.H  CFGPARSE.C  CFGPARSE.H  GAME.MAK  GMAIN.C  GMAIN.H  GSTATE.C  GSTATE.H  MAINDATA.C  MAINDATA.H  SAVEGAME.C  SAVEGAME.H  TIMERPL.C  TIMERPL.H
bak/SRC/GFX/: GFX.MAK
bak/SRC/GFX/DRIVER/: PALDAC.ASM  PALDAC.H  PALDRV.C  PALDRV.H  VIDDET.ASM  VIDDET.H  VIDDRV.C  VIDDRV.H  VIDINIT.ASM  VIDINIT.H  VIDMODE.ASM  VIDMODE.H  VTHUNKS.ASM  VTHUNKS.H
bak/SRC/GFX/FONT/: FONT.C  FONT.H
bak/SRC/GFX/PALETTE/: PALCYC.C  PALCYC.H  PALETTE.C  PALETTE.H
bak/SRC/GFX/RASTER/: CIRCLE.C  (+27 more)
bak/SRC/INPUT/: INPUT.MAK  INT00.ASM  INT00.H  JOYSTICK.ASM  JOYSTICK.H  KEYBOARD.ASM  KEYBOARD.H  MOUSE.ASM  MOUSE.H  TIMER.ASM  TIMER.H
bak/SRC/IO/: DOSRW.ASM  IO.C  IO.H  IO.MAK  IOCHUNK.C  IOCHUNK.H
bak/SRC/R3D/: R3D.MAK
bak/SRC/SCREENS/: BOOKTEXT.C  BOOKTEXT.H  BOOKVIEW.C  BOOKVIEW.H  CIPHER.C  CIPHER.H  CMBINV.C  CMBINV.H  CREDITS.C  CREDITS.H  ENCAMP.C  ENCAMP.H  FMAP.C  FMAP.H  INVENTOR.C  INVENTOR.H  INVINSP.C  INVINSP.H  ITEMTBL.C  ITEMTBL.H  ITEMUSE.C  ITEMUSE.H  MAINMENU.C  MAINMENU.H  PICKLOCK.C  PICKLOCK.H  SCREENS.MAK  SHOP.C  SHOP.H  TOWNSCN.C  TOWNSCN.H
bak/SRC/SCRIPT/: ADSCRIPT.C  ADSCRIPT.H  ANIMSCR.C  ANIMSCR.H  SCRIPT.MAK  TTM.C  TTM.H  TTMDLG.C  TTMDLG.H
bak/SRC/STREAM/: STREAM.MAK
bak/SRC/SYS/: BIOSCHK.C  BIOSCHK.H  DOSMEM.C  DOSMEM.H  D_3657.ASM  EMS.C  EMS.H  EMSDET.C  EMSDET.H  EMSIMG.C  EMSIMG.H  FARPTR.ASM  FARPTR.H  FARTHUNK.C  FARTHUNK.H  HWSHUT.C  HWSHUT.H  MDACON.C  MDACON.H  MEM.C  MEM.H  PANIC.C  PANIC.H  PANICF.C  PANICF.H  POOL.C  POOL.H  RAND.ASM  RAND.H  SYS.MAK  SYSLOWIO.C  SYSLOWIO.H
bak/SRC/UI/: DLGWIDG.C  DLGWIDG.H  LISTWDG.C  LISTWDG.H  MENULBL.C  MENULBL.H  MENUPAGE.C  MENUPAGE.H  MODALSCR.C  MODALSCR.H  NAMEDTBL.C  NAMEDTBL.H  SCROLL.C  SCROLL.H  SHOWMSG.C  SHOWMSG.H  TEXTWRAP.C  TEXTWRAP.H  UI.MAK  UIWIDGET.C  UIWIDGET.H  WIDGET.C  WIDGET.H
bak/SRC/WORLD/: WORLD.MAK
bak/TOOLS/: TOOLS.MAK
bak/TOOLS/PACKOVL/: PACKOVL.C
cli/: pyproject.toml
cli/src/bakbuild/: __init__.py  clang-format.yaml  clang-tidy.yaml  cli.py  disasm.py  format.py  freedos.py  incremental.py  lint.py  omf.py  paths.py  vm.py
cli/src/bakbuild/commands/: build.py  compdb.py  diff.py  format.py  lint.py  rmf.py  viewer.py
cli/src/bakbuild/ide/include/: alloc.h  clion_shim.h  conio.h  ctype.h  dir.h  dos.h  io.h  mem.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
docs/: BUILDING.md
src/: AnimationResource.cc  AnimationResource.h  Audio.h  BMP.cc  BMP.h  BadgeWidget.cc  BadgeWidget.h  BasicFile.cc  BasicFile.h  BookResource.cc  BookResource.h  ButtonWidget.cc  ButtonWidget.h  Camera.cc  Camera.h  Chapter.cc  Chapter.h  CharacterButtonWidget.cc  CharacterButtonWidget.h  ChoiceWidget.cc  ChoiceWidget.h  Clock.h  CombatViewWidget.cc  CombatViewWidget.h  CompassWidget.cc  CompassWidget.h  CompoundObject.cc  CompoundObject.h  ConfigData.h  ConfigFile.cc  ConfigFile.h  ConfigResource.cc  ConfigResource.h  ContainerWidget.cc  ContainerWidget.h  Defines.h  Dialog.cc  Dialog.h  DialogFactory.cc  DialogFactory.h  (+241 more)
viewer/: index.html
viewer/data/: .gitignore  README.md
viewer/js/: bmx.js  dialog.js  dialoggraph.js  dialogview.js  elklayout.js  fpcontrols.js  gamedata.js  inspector.js  main.js  mesh.js  pal.js  rmf.js  schema.js  scx.js  tbl.js  zone.js
(+144 files in other folders)
