[project]
name = "bakbuild"
version = "0.1.0"
description = "bak — the build CLI (drives the FreeDOS qemu MAKE build of KRONDOR.EXE)"
requires-python = ">=3.14"
# typer for the CLI; capstone (CS_MODE_16) disassembles OBJ code for `bak diff`.
# The FreeDOS/qemu VM primitives are vendored, pure-stdlib (see bakbuild.freedos).
dependencies = ["typer>=0.15", "capstone>=5"]

[project.scripts]
bak = "bakbuild.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bakbuild"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
