noinst_HEADERS = AnimationResource.h \
                 BookResource.h \
                 ButtonWidget.h \
                 Chapter.h \
                 CharacterButtonWidget.h \
                 ChoiceWidget.h \
                 Clock.h \
                 ContainerWidget.h \
                 Dialog.h \
                 DialogResource.h \
                 DialogWindow.h \
                 Event.h \
                 EventListener.h \
                 Exception.h \
                 FileBuffer.h \
                 FileManager.h \
                 FontResource.h \
                 Game.h \
                 GameApplication.h \
                 GameData.h \
                 GameFile.h \
                 GamePath.h \
                 GameState.h \
                 GenericFile.h \
                 Image.h \
                 ImageButtonWidget.h \
                 ImageResource.h \
                 LabelResource.h \
                 LabelWidget.h \
                 MediaToolkit.h \
                 MousePointer.h \
                 MousePointerManager.h \
                 MoviePlayer.h \
                 MovieResource.h \
                 NameResource.h \
                 PaletteResource.h \
                 PanelWidget.h \
                 Party.h \
                 PartyResource.h \
                 PlayerCharacter.h \
                 PopUpWidget.h \
                 RequestResource.h \
                 Resource.h \
                 ResourceArchive.h \
                 ResourceFile.h \
                 ResourceIndex.h \
                 ResourcePath.h \
                 ResourceTag.h \
                 SDL_Clock.h \
                 SDL_Toolkit.h \
                 SDL_Video.h \
                 ScreenResource.h \
                 SoundResource.h \
                 TaggedResource.h \
                 TestApplication.h \
                 TextArea.h \
                 TextButtonWidget.h \
                 TickboxWidget.h \
                 TileDataResource.h \
                 TileWorldResource.h \
                 Video.h \
                 Widget.h \
                 WidgetFactory.h \
                 ZoneTableResource.h
bin_PROGRAMS = dumpads \
               dumpbmx \
               dumpbok \
               dumpddx \
               dumpfnt \
               dumpgam \
               dumplbl \
               dumppal \
               dumpreq \
               dumpscx \
               dumpsnd \
               dumptbl \
               dumpttm \
               dumpwld \
               viewres \
               xbak
dumpads_SOURCES = AnimationResource.cc \
                  AnimationResource.h \
                  Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  dumpads.cc
dumpbmx_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Image.cc \
                  Image.h \
                  ImageResource.cc \
                  ImageResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumpbmx.cc
dumpbok_SOURCES = BookResource.cc \
                  BookResource.h \
                  Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumpbok.cc
dumpddx_SOURCES = DialogResource.cc \
                  DialogResource.h \
                  Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumpddx.cc
dumpfnt_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  FontResource.cc \
                  FontResource.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  dumpfnt.cc
dumpgam_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameData.cc \
                  GameData.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumpgam.cc
dumplbl_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  LabelResource.cc \
                  LabelResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumplbl.cc
dumppal_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  MediaToolkit.cc \
                  MediaToolkit.h \
                  PaletteResource.cc \
                  PaletteResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  dumppal.cc
dumpreq_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  RequestResource.cc \
                  RequestResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  dumpreq.cc
dumpscx_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Image.cc \
                  Image.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  ScreenResource.cc \
                  ScreenResource.h \
                  dumpscx.cc
dumpsnd_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  SoundResource.cc \
                  SoundResource.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  dumpsnd.cc
dumptbl_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  ZoneTableResource.cc \
                  ZoneTableResource.h \
                  dumptbl.cc
dumpttm_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  MovieResource.cc \
                  MovieResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  dumpttm.cc
dumpwld_SOURCES = Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  TileDataResource.cc \
                  TileDataResource.h \
                  TileWorldResource.cc \
                  TileWorldResource.h \
                  Video.h \
                  dumpwld.cc
viewres_SOURCES = AnimationResource.cc \
                  AnimationResource.h \
                  Clock.h \
                  Event.cc \
                  Event.h \
                  EventListener.h \
                  Exception.cc \
                  Exception.h \
                  FileBuffer.cc \
                  FileBuffer.h \
                  FileManager.cc \
                  FileManager.h \
                  FontResource.cc \
                  FontResource.h \
                  GameFile.cc \
                  GameFile.h \
                  GamePath.cc \
                  GamePath.h \
                  GenericFile.cc \
                  GenericFile.h \
                  Image.cc \
                  Image.h \
                  ImageResource.cc \
                  ImageResource.h \
                  LabelResource.cc \
                  LabelResource.h \
                  MediaToolkit.cc \
                  MediaToolkit.h \
                  MousePointer.cc \
                  MousePointer.h \
                  MousePointerManager.cc \
                  MousePointerManager.h \
                  MoviePlayer.cc \
                  MoviePlayer.h \
                  MovieResource.cc \
                  MovieResource.h \
                  NameResource.cc \
                  NameResource.h \
                  PaletteResource.cc \
                  PaletteResource.h \
                  RequestResource.cc \
                  RequestResource.h \
                  Resource.h \
                  ResourceArchive.cc \
                  ResourceArchive.h \
                  ResourceFile.cc \
                  ResourceFile.h \
                  ResourceIndex.cc \
                  ResourceIndex.h \
                  ResourcePath.cc \
                  ResourcePath.h \
                  ResourceTag.cc \
                  ResourceTag.h \
                  ScreenResource.cc \
                  ScreenResource.h \
                  SDL_Clock.cc \
                  SDL_Clock.h \
                  SDL_Toolkit.cc \
                  SDL_Toolkit.h \
                  SDL_Video.cc \
                  SDL_Video.h \
                  SoundResource.cc \
                  SoundResource.h \
                  TaggedResource.cc \
                  TaggedResource.h \
                  TestApplication.cc \
                  TestApplication.h \
                  TextArea.cc \
                  TextArea.h \
                  TileDataResource.cc \
                  TileDataResource.h \
                  TileWorldResource.cc \
                  TileWorldResource.h \
                  Video.cc \
                  Video.h \
                  ZoneTableResource.cc \
                  ZoneTableResource.h \
                  viewres.cc
xbak_SOURCES = AnimationResource.cc \
               AnimationResource.h \
               BookResource.cc \
               BookResource.h \
               ButtonWidget.cc \
               ButtonWidget.h \
               Chapter.cc \
               Chapter.h \
               CharacterButtonWidget.cc \
               CharacterButtonWidget.h \
               ChoiceWidget.cc \
               ChoiceWidget.h \
               Clock.h \
               ContainerWidget.cc \
               ContainerWidget.h \
               Dialog.cc \
               Dialog.h \
               DialogResource.cc \
               DialogResource.h \
               DialogWindow.cc \
               DialogWindow.h \
               Event.cc \
               Event.h \
               EventListener.h \
               Exception.cc \
               Exception.h \
               FileBuffer.cc \
               FileBuffer.h \
               FileManager.cc \
               FileManager.h \
               FontResource.cc \
               FontResource.h \
               Game.cc \
               Game.h \
               GameApplication.cc \
               GameApplication.h \
               GameFile.cc \
               GameFile.h \
               GamePath.cc \
               GamePath.h \
               GameData.cc \
               GameData.h \
               GameState.cc \
               GameState.h \
               GenericFile.cc \
               GenericFile.h \
               Image.cc \
               Image.h \
               ImageButtonWidget.cc \
               ImageButtonWidget.h \
               ImageResource.cc \
               ImageResource.h \
               LabelResource.cc \
               LabelResource.h \
               LabelWidget.cc \
               LabelWidget.h \
               MediaToolkit.cc \
               MediaToolkit.h \
               MousePointer.cc \
               MousePointer.h \
               MousePointerManager.cc \
               MousePointerManager.h \
               MoviePlayer.cc \
               MoviePlayer.h \
               MovieResource.cc \
               MovieResource.h \
               NameResource.cc \
               NameResource.h \
               PaletteResource.cc \
               PaletteResource.h \
               PanelWidget.cc \
               PanelWidget.h \
               Party.cc \
               Party.h \
               PartyResource.cc \
               PartyResource.h \
               PlayerCharacter.cc \
               PlayerCharacter.h \
               PopUpWidget.cc \
               PopUpWidget.h \
               RequestResource.cc \
               RequestResource.h \
               Resource.h \
               ResourceArchive.cc \
               ResourceArchive.h \
               ResourceFile.cc \
               ResourceFile.h \
               ResourceIndex.cc \
               ResourceIndex.h \
               ResourcePath.cc \
               ResourcePath.h \
               ResourceTag.cc \
               ResourceTag.h \
               ScreenResource.cc \
               ScreenResource.h \
               SDL_Clock.cc \
               SDL_Clock.h \
               SDL_Toolkit.cc \
               SDL_Toolkit.h \
               SDL_Video.cc \
               SDL_Video.h \
               SoundResource.cc \
               SoundResource.h \
               TaggedResource.cc \
               TaggedResource.h \
               TextArea.cc \
               TextArea.h \
               TextButtonWidget.cc \
               TextButtonWidget.h \
               TickboxWidget.cc \
               TickboxWidget.h \
               TileDataResource.cc \
               TileDataResource.h \
               TileWorldResource.cc \
               TileWorldResource.h \
               Video.cc \
               Video.h \
               Widget.cc \
               Widget.h \
               WidgetFactory.cc \
               WidgetFactory.h \
               ZoneTableResource.cc \
               ZoneTableResource.h \
               xbak.cc
